--- a/views/thread.pug
+++ b/views/thread.pug
@@ -1,38 +1,6 @@
 extends layout
 
-mixin post(post, focus=false)
-
-  if focus
-    .thread-focus(data-id=post.id)
-      .post.focus.container
-        +postBody(post)
-  else
-    .post.container.border-bottom.border-left.border-right(data-id=post.id)
-      +postBody(post)
-
-mixin postBody(post)
-
-  a(href=`/user/${post.username}`)
-    .avatar-sm
-      img(src=`/images/avatar/${post.avatar}.webp`, onerror='this.src="/images/avatar/default.webp"')
-  .h6
-    a(href=`/user/${post.username}`) #{post.username}
-
-  p #{post.text}
-  if post.image
-    .post-image
-      img(src=`/images/upload/${post.image}.webp`)
-
-  table.post-buttons
-    tbody
-      tr
-        td.i.far.fa-comment.comment-button(data-id=post.id, data-toggle='modal')
-        if post.isLiked
-          td.i.fas.fa-heart.liked.like-button(data-id=post.id, data-action='unlike')
-        else
-          td.i.far.fa-heart.like-button(data-id=post.id, data-action='like')
-        td.i.fas.fa-arrow-right.repost-button(data-id=post.id)
-        td #{post.timestamp}
+include mixins/thread
 
 block content
 
