--- a/views/thread.pug
+++ b/views/thread.pug
@@ -1,18 +1,24 @@
 extends layout
 
 include mixins/thread
+include mixins/modals
 
 block content
 
   .thread
 
     if replyTo
-      +post(replyTo)
+      .container.p-0.mt-0.border-left.border-right
+        +post(replyTo)
 
     +post(focus, true)
 
     if thread.length > 0
-      .border-top.container
+      .container.border-top
+    #posts.container.p-0.mt-0.border-left.border-right
+      each item in thread
+        +post(item)
 
-    each item in thread
-      +post(item)
+  //- Modals
+
+  +commentModal()
