Replaced load more button with intersection observer

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -62,6 +62,10 @@ hr {
     background: rgba(0, 0, 0, 0.2);
 }
 
+.load-more {
+    display: hidden;
+}
+
 /*========== Login/Register ==========*/
 
 .login-container {
