--- a/views/posts.pug
+++ b/views/posts.pug
@@ -10,7 +10,7 @@ block profileContent
   #posts.card-body.border-left.border-right
     +posts(profile.content)
 
-  button#load-more.btn.btn-success.mt-3(type='button', data-page=1) Load More
+  .load-more#load-more(data-page=1)
 
   //- Modals
 
