--- a/views/thread.pug
+++ b/views/thread.pug
@@ -14,8 +14,9 @@ block content
     +post(focus, true)
 
     #posts.posts.container.p-0.mt-0.border-left.border-right
-      each item in thread
-        +post(item)
+      +thread(thread)
+
+    .load-more#load-more(data-page=1)
 
   //- Modals
 
