--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -164,7 +164,7 @@ hr {
     margin-right: 30px;
 }
 
-.post-buttons td:after {
+.post-buttons td a {
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
     font-size: 1rem;
     font-weight: normal;
