--- a/views/mixins/thread.pug
+++ b/views/mixins/thread.pug
@@ -14,6 +14,10 @@ mixin post(post, focus=false)
 
 mixin postBody(post)
 
+  - var replyCount = (post.replyCount > 0) ? post.replyCount : null
+  - var likeCount = (post.likeCount > 0) ? post.likeCount : null
+  - var repostCount = (post.repostCount > 0) ? post.repostCount : null
+
   a(href=`/user/${post.username}`)
     .avatar-sm
       img(src=`/images/avatar/${post.avatar}.webp`, onerror='this.src="/images/avatar/default.webp"')
@@ -29,9 +33,13 @@ mixin postBody(post)
     tbody
       tr
         td.i.far.fa-comment.comment-button(data-id=post.id, data-toggle='modal')
+          a  #{replyCount}
         if post.isLiked
           td.i.fas.fa-heart.liked.like-button(data-id=post.id, data-action='unlike')
+            a  #{likeCount}
         else
           td.i.far.fa-heart.like-button(data-id=post.id, data-action='like')
+            a  #{likeCount}
         td.i.fas.fa-arrow-right.repost-button(data-id=post.id)
+          a  #{repostCount}
         td #{post.timestamp}
