Added search functionality with filtered results

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -346,3 +346,15 @@ hr {
 .thread .posts .post:first-child {
     border-top: 1px solid #495057;
 }
+
+/*========== Search ==========*/
+
+.results {
+    width: 100%;
+    margin-top: 57px;
+}
+
+.results .container {
+    max-width: 100%;
+    padding: 15px 12.5% 15px 12.5%;
+}
