--- a/views/mixins/modals.pug
+++ b/views/mixins/modals.pug
@@ -30,6 +30,21 @@ mixin repostModal()
         .modal-body
           button#repost-confirm.btn.btn-primary(type='button') Repost
 
+mixin delPostModal()
+  #del-post-modal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='label', aria-hidden='true')
+
+    .modal-dialog(role='document')
+
+      .modal-content
+
+        .modal-header
+          h5#label.modal-title Confirm Post Deletion
+          button.close(type='button', data-dismiss='modal', aria-label='Close')
+            span(aria-hidden='true') ×
+
+        .modal-body
+          button#del-post-confirm.btn.btn-primary(type='button') Delete Post
+
 mixin delAccountModal()
   #del-account-modal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='label', aria-hidden='true')
 
