--- a/views/home.pug
+++ b/views/home.pug
@@ -3,6 +3,7 @@ extends layout
 include mixins/post
 include mixins/forms
 include mixins/modals
+include mixins/alerts
 
 block content
 
@@ -35,3 +36,4 @@ block content
   +commentModal()
   +repostModal()
   +delPostModal()
+  +alertsContainer()
