--- a/views/posts.pug
+++ b/views/posts.pug
@@ -2,6 +2,7 @@ extends user
 
 include mixins/post
 include mixins/modals
+include mixins/alerts
 
 block profileContent
 
@@ -17,3 +18,4 @@ block profileContent
   +commentModal()
   +repostModal()
   +delPostModal()
+  +alertsContainer()
