--- a/views/search.pug
+++ b/views/search.pug
@@ -2,6 +2,7 @@ extends layout
 
 include mixins/post
 include mixins/modals
+include mixins/alerts
 
 block content
 
@@ -17,3 +18,4 @@ block content
 
   +commentModal()
   +repostModal()
+  +alertsContainer()
