--- a/views/thread.pug
+++ b/views/thread.pug
@@ -2,6 +2,7 @@ extends layout
 
 include mixins/thread
 include mixins/modals
+include mixins/alerts
 
 block content
 
@@ -23,3 +24,4 @@ block content
   +commentModal()
   +repostModal()
   +delPostModal()
+  +alertsContainer()
