--- a/views/settings.pug
+++ b/views/settings.pug
@@ -1,13 +1,14 @@
 extends layout
 
 include mixins/modals
+include mixins/alerts
 
 block content
 
   .settings-container
     h1 Settings
 
-    form.mt-4(action='/settings/update-password', method='post')
+    form.mt-4(action='/settings/update-password', method='post', id='update-password')
       h5 Change Password
       .form-group
         input.form-control(type='password', placeholder='New Password', name='password')
@@ -15,25 +16,25 @@ block content
         input.form-control(type='password', placeholder='Repeat New Password', name='passwordRepeat')
       button.btn.btn-primary.btn-lg(type='submit') Update Password
 
-    form.mt-4(action='/settings/update-email', method='post')
+    form.mt-4(action='/settings/update-email', method='post', id='update-email')
       h5 Change Email Address
       .form-group
         input.form-control(type='email', aria-describedby='emailHelp', placeholder='New Email Address', name='email')
       button.btn.btn-primary.btn-lg(type='submit') Update Email Address
 
-    form.mt-4(action='/settings/update-avatar', method='post', enctype='multipart/form-data')
+    form.mt-4(action='/settings/update-avatar', method='post', enctype='multipart/form-data', id='update-avatar')
       h5 Change Avatar
       .form-group
         input#profileAvatar.form-control-file(type='file', accept='image/x-png,image/gif,image/jpeg', name='avatar')
       button.btn.btn-primary.btn-lg(type='submit') Update Avatar
 
-    form.mt-4(action='/settings/update-header', method='post', enctype='multipart/form-data')
+    form.mt-4(action='/settings/update-header', method='post', enctype='multipart/form-data', id='update-header')
       h5 Change Header
       .form-group
         input#profileHeader.form-control-file(type='file', accept='image/x-png,image/gif,image/jpeg', name='header')
       button.btn.btn-primary.btn-lg(type='submit') Update Header
 
-    form.mt-4(action='/settings/update-bio', method='post')
+    form.mt-4(action='/settings/update-bio', method='post', id='update-bio')
       h5 Change Bio
       .form-group
         textarea#profileBio.form-control(rows='3', placeholder='Bio' name='bio')
@@ -45,3 +46,4 @@ block content
     button#del-account.btn.btn-danger.btn-lg.mt-3(type='button') Delete Account
 
   +delAccountModal
+  +alertsContainer
