Added unescaping for special characters in posts/bio

--- a/views/mixins/thread.pug
+++ b/views/mixins/thread.pug
@@ -27,7 +27,7 @@ mixin postBody(post)
   .h6
     a(href=`/user/${post.username}`) #{post.username}
 
-  p #{post.text}
+  p!= post.text
   if post.image
     .post-image
       img(src=`/images/upload/${post.image}.webp`)
